# caleb-keyrock-task

./: Cargo.toml  README.md  build.rs
orderbook-agg/: Cargo.toml  README.md  build.rs
orderbook-agg-old/: Cargo.toml  build.rs
orderbook-agg-old/fixtures/: binance_BTCUSDT.json
orderbook-agg-old/proto copy/: booksummary.proto
orderbook-agg-old/src/: client.rs  orderbook.rs  server.rs  symbol.rs  update.rs
orderbook-agg/proto/: booksummary.proto
orderbook-agg/src/: client.rs  lib.rs  main.rs  orderbook.rs  server.rs  symbol.rs  update.rs  utils.rs
orderbook-agg/src/core/: exchange_book.rs  exchange_orderbook.rs  exchangebook.rs  mod.rs  num_types.rs  number_types.rs  order_book.rs  orderbook.rs
orderbook-agg/src/exchange/: binance.rs
orderbook-agg/src/exchanges/: mod.rs
orderbook-agg/src/exchanges/binance/: data.rs  mod.rs
orderbook-agg/src/exchanges/bitstamp/: data.rs  mod.rs
proto/: booksummary.proto  orderbook.proto
src/: client.rs  common.rs  lib.rs  orderbook.rs  server.rs  snapshot.rs  symbol.rs  update.rs
terminal-app/: Cargo.toml  README.md
terminal-app/src/: lib.rs  main.rs
terminal-app/src/app/: mod.rs  state.rs  ui.rs
terminal-app/src/inputs/: events.rs  mod.rs
terminal-app/src/io/: handler.rs  mod.rs
tests/fixtures/: snapshot_bitstamp.json
