[package]
name = "caleb-keyrock-task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ckt_lib"
path = "src/lib.rs"

# server binary
[[bin]]
    name = "server"
    path = "src/server.rs"

# client binary
[[bin]]
    name = "client"
    path = "src/client.rs"

[dependencies]
async-trait = "0.1.68"
clap = { version = "4.3.4", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3.28"
protoc = "2.28.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
tonic = "0.9.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.4.0"
prost = "0.11.9"
serde = { version = "1.0.164", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
serde-aux = "4.2.0"

# protobuf = { version = "3.2.0", features = ["with-bytes"] }

[build-dependencies]
tonic-build = { version = "0.9.2", features = ["transport"] }
protobuf-json-mapping = "3.2.0"

[dev-dependencies]
memory-stats = "1.1.0"
