[workspace]

members = [
    "orderbook-agg",
    "terminal-app",
]

[workspace.dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
clap = { version = "4.3.4", features = ["derive"] }
time = "0.3.22"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "sync", "time"] }
tonic = "0.9.2"