[workspace]

members = [
    "orderbook-agg",
    "terminal-app",
]

[workspace.dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
chrono = "0.4.26"
clap = { version = "4.3.4", features = ["derive"] }
futures = "0.3.28"
prost = "0.11.9"
protoc = "2.28.0"
reqwest = { version = "0.11.18", features = ["json"] }
rust_decimal = { version = "1.30", features = ["maths", "default"] }
rust_decimal_macros = "1.30"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
serde-aux = "4.2.0"
strum = { version = "0.24.1", features = ["derive"] }
time = "0.3.22"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
tonic = "0.9.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.4.0"
