[package]
name = "orderbook-agg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# server binary
[[bin]]
    name = "server"
    path = "src/server.rs"

# client binary
[[bin]]
    name = "client"
    path = "src/client.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1.68"
chrono = {workspace = true }
clap = {workspace = true }
dotenv = "0.15.0"
futures = "0.3.28"
prost = "0.11.9"
protoc = "2.28.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
serde-aux = "4.2.0"
strum = { version = "0.24.1", features = ["derive"] }
tokio = { workspace = true }
tokio-stream = "0.1.14"
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
tonic = { workspace = true }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.4.0"

[build-dependencies]
protobuf-json-mapping = "3.2.0"
tonic-build = { version = "0.9.2", features = ["transport"] }

[dev-dependencies]
memory-stats = "1.1.0"
