[package]
name = "orderbook-agg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# client binary
[[bin]]
    name = "client"
    path = "src/client.rs"

# server binary
[[bin]]
    name = "server"
    path = "src/server.rs"

# main binary
[[bin]]
    name = "main"
    path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
chrono = {workspace = true }
futures = {workspace = true }
prost = {workspace = true }
protoc = {workspace = true }
reqwest = {workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = {workspace = true }
serde_json = {workspace = true }
serde-aux = {workspace = true }
strum = {workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-tungstenite = { workspace = true }
tonic = { workspace = true }
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
url = {workspace = true}
num-traits = "0.2.15"


[build-dependencies]
protobuf-json-mapping = "3.2.0"
tonic-build = { version = "0.9.2", features = ["transport"] }

[dev-dependencies]
memory-stats = "1.1.0"
